[package]
name = "mownstr"
description = "Maybe Owned String"
version = "0.1.1"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2018"
repository = "https://github.com/pchampin/mownstr"
documentation = "https://docs.rs/mownstr"
readme = "./README.md"
license = "CECILL-B"
keywords = ["string", "wrapper", "semantic-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench1"
harness = false
