[package]
name = "mownstr"
description = "Maybe Owned String"
version = "0.3.1"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
repository = "https://github.com/pchampin/mownstr"
documentation = "https://docs.rs/mownstr"
readme = "./README.md"
license = "CECILL-B"
keywords = ["string", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version="0.4", optional=true }

[features]
criterion = [ "dep:criterion" ]

[[bench]]
name = "bench1"
harness = false
required-features = ["criterion"]
